chore: change directory

--- a/server-api/src/main/resources/application-prod.properties
+++ b/server-api/src/main/resources/application-prod.properties
@@ -26,6 +26,6 @@ server.port=${PORT:8080}
 cors.allowed-origins=${CORS_ORIGINS:https://yourdomain.com}
 
 # Logging (Less verbose in production)
-logging.level.com.example.serverapi=INFO
+logging.level.com.eps.serverapi=INFO
 logging.level.org.springframework.security=WARN
 logging.level.org.hibernate.SQL=WARN
