--- a/server-api/src/main/resources/application.properties
+++ b/server-api/src/main/resources/application.properties
@@ -38,5 +38,5 @@ email.from-address=noreply@epsho.electronicpay.in
 email.from-name=EpsOne Support
 
 # Logging
-logging.level.com.example.serverapi=DEBUG
+logging.level.com.eps.serverapi=DEBUG
 logging.level.org.springframework.security=DEBUG
